[package]
name = "daummap"
version = "0.2.1"
authors = ["pbzweihander <sd852456@naver.com>"]
description = "Daum Map API wrapper"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/daummap/"
repository = "https://github.com/pbzweihander/daummap-rs"
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
failure = "0.1.4"
hyper = "0.12.19"
hyper-tls = "0.3.1"
futures = "0.1.25"
tokio = "0.1.13"
percent-encoding = "1.0.1"

[dev-dependencies]
dotenv = "0.13.0"
