[package]
name = "daummap"
version = "0.3.1"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
description = "Kakao Map API wrapper"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/daummap/"
repository = "https://github.com/pbzweihander/daummap-rs"
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
failure = "0.1.5"
reqwest = "0.9.14"
futures = "0.1.26"

[dev-dependencies]
tokio = "0.1.18"
hyper = "0.12.27"
dotenv = "0.13.0"
