[package]
name = "daummap"
version = "0.4.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
description = "Kakao Map API wrapper"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/daummap/"
repository = "https://github.com/pbzweihander/daummap-rs"
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
failure = "0.1.8"
reqwest = { version = "0.11.6", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.14.0", features = ["macros"] }
hyper = { version = "0.14.15", features = ["server"] }
